force-app/main/default/objects/SSLoggingSettings__c/SSLoggingSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>SSLoggingSettings</label>
</CustomObject>