force-app/main/default/objects/SSLoggingSettings__c/fields/App_Name__c.field-meta.xml
<CustomField>
    <fullName>App_Name__c</fullName>
    <description>The default App Name to group logs by. This displays as the blue text in Papertrail.</description>
    <inlineHelpText>The default App Name to group logs by. This displays as the blue text in Papertrail.</inlineHelpText>
    <label>App Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>