force-app/main/default/objects/SSLoggingSettings__c/fields/Log_Layout__c.field-meta.xml
<CustomField>
    <fullName>Log_Layout__c</fullName>
    <description>How logs should be displayed. Autoinjected fields are ${message}, ${logger}, ${level}, and ${date}</description>
    <inlineHelpText>How logs should be displayed. Autoinjected fields are ${message}, ${logger}, ${level}, and ${date}</inlineHelpText>
    <label>Log Layout</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>