force-app/main/default/objects/SSLoggingSettings__c/fields/Logging_Bridge_Url__c.field-meta.xml
<CustomField>
    <fullName>Logging_Bridge_Url__c</fullName>
    <defaultValue>"https://salesforcelogging.azurewebsites.net/api/Log"</defaultValue>
    <description>The URL to the API endpoint for posting log messages</description>
    <inlineHelpText>The URL to the API endpoint for posting log messages</inlineHelpText>
    <label>Logging Bridge URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>