force-app/main/default/objects/SSLoggingSettings__c/fields/Logging_Server_Port__c.field-meta.xml
<CustomField>
    <fullName>Logging_Server_Port__c</fullName>
    <description>The port for the logging server the bridge should post to. Found in "Add Systems" dialog in Papertrail.</description>
    <inlineHelpText>The port for the logging server the bridge should post to. Found in "Add Systems" dialog in Papertrail.</inlineHelpText>
    <label>Logging Server Port</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>