force-app/main/default/objects/SSLoggingSettings__c/fields/Logging_Server_URL__c.field-meta.xml
<CustomField>
    <fullName>Logging_Server_URL__c</fullName>
    <defaultValue>"logsX.papertrailapp.com"</defaultValue>
    <description>The Syslog server logs should be posted to by the Logging Bridge. Server must support the TCP protocol and have TLS enabled. Papertrail is a popular choice for this.</description>
    <inlineHelpText>The Syslog server logs should be posted to by the Logging Bridge. Server must support the TCP protocol and have TLS enabled. Papertrail is a popular choice for this.</inlineHelpText>
    <label>Logging Server URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>