force-app/main/default/objects/SSLoggingSettings__c/fields/Papertrail_LogsX__c.field-meta.xml
<CustomField>
    <fullName>Papertrail_LogsX__c</fullName>
    <description>The "X" in "logsX.papertrailapp.com:YYYYY". Found in "Add Systems" dialog in Papertrail.</description>
    <inlineHelpText>The "X" in "logsX.papertrailapp.com:YYYYY". Found in "Add Systems" dialog in Papertrail.</inlineHelpText>
    <label>Papertrail LogsX</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>