force-app/main/default/objects/SSLoggingSettings__c/fields/Papertrail_Port__c.field-meta.xml
<CustomField>
    <fullName>Papertrail_Port__c</fullName>
    <description>The "YYYYY" in "logsX.papertrailapp.com:YYYYY". Found in "Add Systems" dialog in Papertrail.</description>
    <inlineHelpText>The "YYYYY" in "logsX.papertrailapp.com:YYYYY". Found in "Add Systems" dialog in Papertrail.</inlineHelpText>
    <label>Papertrail Port</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>